Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2.8
-
None
Description
after MDEV-13370 server includes got installed under /usr/include/mysql/server. But some client packages need them, e.g. mysql-python needs my_config.h.
They shouldn't need them and mysql-python doesn't really use the included file, but some might use them and they need time to be fixed.
Possible solution, install headers, like
|
/usr/include/mysql/my_global.h |
#include "server/my_global.h"
|
#warning Clients should not include this file, it's a server header. Report a bug to project maintainers! |
Attachments
Issue Links
- is caused by
-
MDEV-13370 Ambiguous behaviour regarding installation of header files
-
- Closed
-
- links to