Fix #172: sysbench 1.0.9 doesn't build with mariadb 10.2.8

Add a configure check for <server/mysql_version.h> which appears to be
the most portable way to fix MariaDB builds (see MDEV-13773).